bottom/responsive/work-3-march

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <div class="div_A">
                 <img
                   class="first_image"
-                  src="637555976fe77d1efc855813_Untitled design (18)-p-500.png"
+                  src="63754d672f6a3d82178d4763_Untitled design (15)-p-500.png"
                   alt=""
                 />
                 <div><button class="button_user">USER ONBOARDING</button></div>
@@ -319,7 +319,7 @@
               <div class="div_A">
                 <img
                   class="first_image"
-                  src="637552f3ea3bfccc353fff36_Untitled design (17)-p-500.png"
+                  src="63754b520dbac21c95a0f560_Untitled design (14)-p-500.png"
                   alt=""
                 />
                 <div><button class="button_user">USER ONBOARDING</button></div>
@@ -356,9 +356,113 @@
               <div class="div_A">
                 <img
                   class="first_image"
-                  src="63753ffacea54a3bf3c62d9c_Untitled design (9)-p-500.png"
+                  src="63754ac02296db14a16f1b20_Untitled design (13)-p-500.png"
                   alt=""
                 />
+                <div><button class="button_user">USER ONBOARDING</button></div>
+                <p class="para">
+                  Thinkific's jump-in, jump-out onboarding <br />
+                  checklist
+                </p>
+                <p style="font-size: 12px; margin-left: 40px">
+                  Explorers make up part of any new user cohort. Learn how Adobe
+                  primes creative professionals to experience value in Photoshop
+                  on their own terms.
+                </p>
+                <hr
+                  style="
+                    height: 1px;
+                    border-width: 0;
+                    color: gray;
+                    background-color: gray;
+                    margin-top: 50px;
+                  "
+                />
+
+                <div style="display: flex; margin-left: 130px">
+                  <div>
+                    <img
+                      style="width: 15px; margin-top: 7px"
+                      src="63754ac02296db14a16f1b20_Untitled design (13)-p-500.png"
+                      alt=""
+                    />
+                  </div>
+                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="" style="text-decoration: none; color: black">
+            <div class="below_three" style="margin-top: 100px">
+              <div class="div_A">
+                <img class="first_image" src="1.png" alt="" />
+                <div><button class="button_user">USER ONBOARDING</button></div>
+                <p class="para">
+                  Thinkific's jump-in, jump-out onboarding <br />
+                  checklist
+                </p>
+                <p style="font-size: 12px; margin-left: 40px">
+                  Explorers make up part of any new user cohort. Learn how Adobe
+                  primes creative professionals to experience value in Photoshop
+                  on their own terms.
+                </p>
+                <hr
+                  style="
+                    height: 1px;
+                    border-width: 0;
+                    color: gray;
+                    background-color: gray;
+                    margin-top: 50px;
+                  "
+                />
+
+                <div style="display: flex; margin-left: 130px">
+                  <div>
+                    <img
+                      style="width: 15px; margin-top: 7px"
+                      src="685655.png"
+                      alt=""
+                    />
+                  </div>
+                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
+                </div>
+              </div>
+
+              <div class="div_A">
+                <img class="first_image" src="2.png" alt="" />
+                <div><button class="button_user">USER ONBOARDING</button></div>
+                <p class="para">
+                  Thinkific's jump-in, jump-out onboarding <br />
+                  checklist
+                </p>
+                <p style="font-size: 12px; margin-left: 40px">
+                  Explorers make up part of any new user cohort. Learn how Adobe
+                  primes creative professionals to experience value in Photoshop
+                  on their own terms.
+                </p>
+                <hr
+                  style="
+                    height: 1px;
+                    border-width: 0;
+                    color: gray;
+                    background-color: gray;
+                    margin-top: 50px;
+                  "
+                />
+
+                <div style="display: flex; margin-left: 130px">
+                  <div>
+                    <img
+                      style="width: 15px; margin-top: 7px"
+                      src="685655.png"
+                      alt=""
+                    />
+                  </div>
+                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
+                </div>
+              </div>
+              <div class="div_A">
+                <img class="first_image" src="3.jpeg" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -395,11 +499,7 @@
           <a href="" style="text-decoration: none; color: black">
             <div class="below_three" style="margin-top: 100px">
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637555976fe77d1efc855813_Untitled design (18)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="4.png" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -433,11 +533,7 @@
               </div>
 
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637552f3ea3bfccc353fff36_Untitled design (17)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="5.jpeg" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -470,127 +566,7 @@
                 </div>
               </div>
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="63753ffacea54a3bf3c62d9c_Untitled design (9)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-            </div>
-          </a>
-          <a href="" style="text-decoration: none; color: black">
-            <div class="below_three" style="margin-top: 100px">
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637555976fe77d1efc855813_Untitled design (18)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637552f3ea3bfccc353fff36_Untitled design (17)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="63753ffacea54a3bf3c62d9c_Untitled design (9)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="6.jpeg" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -627,11 +603,7 @@
           <a href="" style="text-decoration: none; color: black">
             <div class="below_three" style="margin-top: 100px">
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637555976fe77d1efc855813_Untitled design (18)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="7.jpeg" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -665,11 +637,7 @@
               </div>
 
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637552f3ea3bfccc353fff36_Untitled design (17)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="8.jpeg" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -702,127 +670,7 @@
                 </div>
               </div>
               <div class="div_A">
-                <img
-                  class="first_image"
-                  src="63753ffacea54a3bf3c62d9c_Untitled design (9)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-            </div>
-          </a>
-          <a href="" style="text-decoration: none; color: black">
-            <div class="below_three" style="margin-top: 100px">
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637555976fe77d1efc855813_Untitled design (18)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="637552f3ea3bfccc353fff36_Untitled design (17)-p-500.png"
-                  alt=""
-                />
-                <div><button class="button_user">USER ONBOARDING</button></div>
-                <p class="para">
-                  Thinkific's jump-in, jump-out onboarding <br />
-                  checklist
-                </p>
-                <p style="font-size: 12px; margin-left: 40px">
-                  Explorers make up part of any new user cohort. Learn how Adobe
-                  primes creative professionals to experience value in Photoshop
-                  on their own terms.
-                </p>
-                <hr
-                  style="
-                    height: 1px;
-                    border-width: 0;
-                    color: gray;
-                    background-color: gray;
-                    margin-top: 50px;
-                  "
-                />
-
-                <div style="display: flex; margin-left: 130px">
-                  <div>
-                    <img
-                      style="width: 15px; margin-top: 7px"
-                      src="685655.png"
-                      alt=""
-                    />
-                  </div>
-                  <div><p style="font-size: 10px">6SCREENSHOTS</p></div>
-                </div>
-              </div>
-              <div class="div_A">
-                <img
-                  class="first_image"
-                  src="63753ffacea54a3bf3c62d9c_Untitled design (9)-p-500.png"
-                  alt=""
-                />
+                <img class="first_image" src="9.png" alt="" />
                 <div><button class="button_user">USER ONBOARDING</button></div>
                 <p class="para">
                   Thinkific's jump-in, jump-out onboarding <br />
@@ -857,23 +705,33 @@
             </div>
           </a>
         </div>
+        <!-- <div class="bottom">
+          <div class="all_items_bottom">
+            <div class="bottom_para">
+              <h1 style="margin-top: 50px;">Inspiring UX, straight to your inbox.</h1>
+            </div>
+            <div class="email_address1">
+              <input class="input_email1" type="email" />
+              <button class="stay_inspired">Stay inspired</button>
+              <p class="lower_input" style="color: white">
+                Brought to you with 💜 by the friendly folks @ Appcues
+              </p>
+            </div>
+          </div>
+        </div> -->
       </div>
-      <div class="bottom">
-        <div class="all_items_bottom">
-          <div class="bottom_para">
-            <h1 >
-              Inspiring UX, straight to your inbox.
-            </h1>
-          </div>
-          <div class="email_address1">
-            <input class="input_email1" type="email" />
-            <button class="stay_inspired">Stay inspired</button>
-            <p class="lower_input" style="color: white">
-              Brought to you with 💜 by the friendly folks @ Appcues
-            </p>
-          </div>
+      <div class="bottom1">
+        <div>
+          <h1 style="color: white;text-align: center;" >Inspiring UX, straight to your inbox.</h1>
         </div>
-       
+
+        <div class="email_address1">
+          <input class="input_email1" type="email" />
+          <button class="stay_inspired">Stay inspired</button>
+          <p class="lower_input1" style="color: white">
+            Brought to you with 💜 by the friendly folks @ Appcues
+          </p>
+        </div>
       </div>
     </div>
   </body>
