--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GoodUX</title>
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
@@ -720,18 +720,21 @@
           </div>
         </div> -->
       </div>
-      <div class="bottom1">
-        <div>
-          <h1 style="color: white;text-align: center;" >Inspiring UX, straight to your inbox.</h1>
-        </div>
+      
+    </div>
+    <div class="bottom1">
+      <div>
+        <h1 style="color: white; text-align: center">
+          Inspiring UX, straight to your inbox.
+        </h1>
+      </div>
 
-        <div class="email_address1">
-          <input class="input_email1" type="email" />
-          <button class="stay_inspired">Stay inspired</button>
-          <p class="lower_input1" style="color: white">
-            Brought to you with 💜 by the friendly folks @ Appcues
-          </p>
-        </div>
+      <div class="email_address1">
+        <input class="input_email1" type="email" />
+        <button class="stay_inspired">Stay inspired</button>
+        <p class="lower_input1" style="color: white">
+          Brought to you with 💜 by the friendly folks @ Appcues
+        </p>
       </div>
     </div>
   </body>
