--- a/good_ux_2/index.html
+++ b/good_ux_2/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="parent_div">
-      <div class="nav_bar">
+    <div class="parent_div" >
+      <div class="nav_bar" style="position: fixed;" >
         <div class="left_div">
           <div class="left_logo">
             <img
@@ -20,25 +20,76 @@
         </div>
         <div class="right_div">
           <div>
-            <a class="Cetegories" href=""><p class="Cetegories">Categories</p></a>
+            <a class="caterories" href=""><p class="ak">Categories</p></a>
           </div>
-          <div style="flex-basis:200px">
-            <a class="behind_the"  href="">
-              <p>
-                🎙 Behind the Experience</p>
+          <div style="flex-basis: 330px">
+            <a class="behind_the" href="">
+              <p class="ak">🎙 Behind the Experience</p>
             </a>
           </div>
-          <div style="flex-basis:50px" >
-            <a class="behind_the" href=""><p>
-              About</p></a>
+          <div style="flex-basis: 90px">
+            <a class="behind_the" href=""><p class="ak">About</p></a>
           </div>
-          <div style="flex-basis:200px">
-            <input class="input_area" placeholder="search" type="text" value="🔎">
+          <div style="flex-basis: 200px">
+            <input
+              class="input_area"
+              placeholder="search"
+              type="text"
+              value="🔎"
+            />
           </div>
-          <div>5</div>
-          <div>6</div>
-          <div>7</div>
+          <div style="flex-basis: 190px" class="div_button">
+            <a href="">
+              <button class="button_whatis">What is Appcues?</button>
+            </a>
+          </div>
+          <div>
+            <button class="button_for_subscribe">Subscribe</button>
+          </div>
+          <div>
+            <svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="100"
+              height="100"
+              viewBox="0 0 50 50"
+            >
+              <path
+                d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z"
+              ></path>
+            </svg>
+          </div>  
         </div>
+      </div>
+      <div class="second_container">
+        <div class="first_child">
+          <div class="content_area">
+            <p style="color: white; margin-top: 100px; text-align: center;">DON'T MISS OUT ON THE LATEST</p>
+            <h1 style="text-align: center;color: white;margin: 10px;">
+              Inspiring product-led experiences—straight to your <br />
+              inbox
+            </h1>
+            <div class="email_address" style="text-align: center;">
+              <input class="input_email" type="email" placeholder="Email Adress" />
+              <button class="stay_inspired">Stay inspired</button>
+              <p class="lower_input">
+                Commitment issues? Unsubscribe at any time.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="third_child">
+          <div class="third_child_1"></div>
+          <div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+          
+        </div>
+        
       </div>
     </div>
   </body>
