addfiles/navbar/9-mar

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               Inspiring product-led experiences—straight to your <br />
               inbox
             </h1>
-            <div class="email_address">
+            <div class="email_address" style="text-align: center;">
               <input class="input_email" type="email" />
               <button class="stay_inspired">Stay inspired</button>
               <p class="lower_input">
