--- a/good_ux_3/index.html
+++ b/good_ux_3/index.html
@@ -3,60 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>good_ux-3</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="grid-container">
-      <div class="item1">1</div>
-      <div class="item2">
-        <div class="flex-container">
-          <div class="right_div">
-            <div>
-              <a class="caterories" href=""><p class="ak">Categories</p></a>
-            </div>
-            <div style="flex-basis: 330px">
-              <a class="behind_the" href="">
-                <p class="ak">🎙 Behind the Experience</p>
-              </a>
-            </div>
-            <div style="flex-basis: 90px">
-              <a class="behind_the" href=""><p class="ak">About</p></a>
-            </div>
-            <div style="flex-basis: 200px">
-              <input
-                class="input_area"
-                placeholder="search"
-                type="text"
-                value="🔎"
-              />
-            </div>
-            <div style="flex-basis: 190px" class="div_button">
-              <a href="">
-                <button class="button_whatis">What is Appcues?</button>
-              </a>
-            </div>
-            <div>
-              <button class="button_for_subscribe">Subscribe</button>
-            </div>
-            <div>
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="100"
-                height="100"
-                viewBox="0 0 50 50"
-              >
-                <path
-                  d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 Z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 Z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 Z"
-                ></path>
-              </svg>
-            </div>
-          </div>
+    <nav class="nav_bar">
+      <div class="first_container">
+        <div class="left_section">a</div>
+        <div class="right_section">
+          <ul>
+            <li><a href="">
+              Categories</a></li>
+            <li><a href="">🎙 Behind the Experiance</a></li>
+            <li><a href="">About</a></li>
+            <input type="text">
+            <li><a href="">What is Appcues?</a></li>
+            <li><a href="">Subscribe</a></li>
+            
+          </ul>
         </div>
       </div>
-    </div>
+    </nav>
   </body>
 </html>
