12-march-all-work

--- a/AirBnb/index.html
+++ b/AirBnb/index.html
@@ -76,103 +76,114 @@
     <hr />
 
     <div class="flex-container">
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href="">
-            <i class="ri-home-3-fill"></i
-          ></a>
+      <div class="flex-container-div">
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href="">
+              <i class="ri-home-3-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-shield-star-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-shield-star-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-shield-star-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-shield-star-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-cloud-windy-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-cloud-windy-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href="">
-            <i class="ri-home-7-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href="">
+              <i class="ri-home-7-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href="">
-            <i class="ri-magic-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href="">
+              <i class="ri-magic-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-building-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-building-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-cup-line"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-cup-line"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-home-gear-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-home-gear-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-home-smile-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-home-smile-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href="">
-            <i class="ri-home-office-line"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href="">
+              <i class="ri-home-office-line"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a style="text-decoration: none; color: black" href=""
-            ><i class="ri-umbrella-fill"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a style="text-decoration: none; color: black" href=""
+              ><i class="ri-umbrella-fill"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="ak">
-          <a
-            style="text-decoration: none; color: black; margin-top: 100px"
-            href=""
-            ><i class="ri-truck-line"></i
-          ></a>
+        <div>
+          <div class="ak">
+            <a
+              style="text-decoration: none; color: black; margin-top: 100px"
+              href=""
+              ><i class="ri-truck-line"></i
+            ></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="right-side-settings">
-          <i style="font-size: 20px" class="ri-equalizer-fill"></i>
-          <p style="font-size: 20px">Filters</p>
+        <div>
+          <div class="right-side-settings">
+            <i style="font-size: 20px" class="ri-equalizer-fill"></i>
+            <p style="font-size: 20px; margin-top: -1px">Filters</p>
+          </div>
+        </div>
+        <div>
+          <div class="right-side-on-off-button">
+            <p style="margin-top: -1px">Display total before taxes</p>
+            <label class="switch">
+              <input type="checkbox" checked />
+              <span class="slider round"></span>
+            </label>
+          </div>
         </div>
       </div>
       <div>
@@ -180,6 +191,24 @@
           <button>Display total before taxes</button>
         </div> -->
       </div>
+    </div>
+    <div class="third-container">
+      <div class="thord-container-image">
+        
+        <div class="first-image">
+          <img class="image-section" src="111e52e0-8a3a-4747-9a92-97d620eb11d8.avif" alt="" />
+        </div class="first-image">
+        <div>
+          <img class="image-section-1" src="b2e1e6bf-a55d-44b1-9721-0fc9261fce29.avif" alt="" />
+        </div>
+        <div class="first-image">
+          <img class="image-section" src="fa841ed2-fd87-4862-af62-9073d67d1518.avif" alt="" />
+        </div>
+        <div class="first-image">
+          <img class="image-section-1" src="fad07ef1-fc40-4d2e-9c66-760a76960e98.avif" alt="" />
+        </div>
+      </div>
+        
     </div>
   </body>
 </html>
